# MinimalDFA

./: CMakeLists.txt  README.md  cur_aut.h  main  main.cpp
lib/: CMakeLists.txt  automaton.cpp  automaton.h  input.txt  main.cpp
tests/: CMakeLists.txt  tests_imp.cpp
tests/txt/: mpdka_ans.txt
